# crispy-rotary-phone

./: .gitignore  .swp  CLAUDE.md  OPEN_QUESTIONS.md  PLAN.md  README.md  mrw.toml  pyproject.toml
.github/workflows/: claude-review.yml
docs/reviews/: 001-phase0-plan.md  002-schema-revisions.md  003-m0-skeleton.md  004-pr1-review-automation.md  005-m2-stems.md  006-m3-features.md  007-m4-lyrics.md  CHECKLIST.md
mrw/: __init__.py  align.py  canonical.py  captions.py  cli.py  config.py  costs.py  features.py  hashing.py  ingest.py  library.py  lyrics.py  models.py  stems.py  video.py
schemas/: README.md  audio_features.schema.json  common.schema.json  lyrics.schema.json  manifest.schema.json  source.schema.json  structure.schema.json  video.schema.json
schemas/examples/: audio_features.json  lyrics.json  manifest.json  source.json  structure.json  video.json
tests/: conftest.py  test_m0_smoke.py  test_m1_smoke.py  test_m2_field_fixes.py  test_m2_smoke.py  test_m3_followups.py  test_m3_smoke.py  test_m4_smoke.py  test_m5_smoke.py
