[project]
name = "mrw"
version = "0.1.0"
description = "Music Reinterpretation Workbench — Mac-side analysis pipeline"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "jsonschema>=4.21",
]

[project.scripts]
mrw = "mrw.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mrw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
