[project]
name = "mrw"
version = "0.1.0"
description = "Music Reinterpretation Workbench — Mac-side analysis pipeline"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "demucs==4.0.1",
    "soundfile>=0.12",
    # demucs 4.0.1 checkpoints fail torch>=2.6 (weights_only default flip)
    "torch>=2.4,<2.6",
    "torchaudio>=2.4,<2.6",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "jsonschema>=4.21",
]

[project.scripts]
mrw = "mrw.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mrw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: invokes Demucs separation (minutes on CPU)",
]

# CPU-only torch wheels on Linux CI (default PyPI linux wheels bundle CUDA, ~2.5 GB)
[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
